# langchain-tutorial

./: .env.example  .gitignore  Guide-Template.ipynb  README.md  pyproject.toml
01-LCEL/: 00-OpenRouter.ipynb  01-OpenAI-LLM.ipynb  02-LCEL.Ipynb  03-PromptTemplate.ipynb  04-FewShotTemplates.ipynb  05-PydanticOuputParser.ipynb
02-RAG/: 00-RAG-Basic-PDF.ipynb  01-RAG-Basic-PDF.ipynb  01-RAG-Basic-Webloader.ipynb  02-RAG-Basic-Webloader.ipynb  02-RecursiveCharacterTextSplitter.ipynb  03-RecursiveCharacterTextSplitter.ipynb  03-SemanticChunker.ipynb  04-OpenAIEmbeddings.ipynb  05-CacheBackedEmbeddings.ipynb  06-FAISS.ipynb  07-VectorStoreRetriever.ipynb  08-EnsembleRetriever.ipynb  09-SelfQueryRetriever.ipynb  10-Cohere-Reranker.ipynb  11-Kiwi-BM25Retriever.ipynb
03-Summary/: 01-Summary.ipynb
04-Agent/: 01-Tools.ipynb  02-Bind-Tools.ipynb  03-Agent.ipynb  03-React-Agent.ipynb  03-Tool-Calling-Agent.ipynb  04-React-Agent.ipynb  12-React-Agent.ipynb
05-MCP/: 01-MCP-Tools.ipynb  install_node_npx.sh
05-MCP/server/: mcp_server_rag.py
06-Modules/01-Basic/: 01-OpenAI-APIKey.ipynb
06-Modules/03-OutputParser/: 01-PydanticOuputParser.ipynb
06-Modules/04-Model/: 01-Chat-Models.ipynb
06-Modules/06-DocumentLoader/: 00-Document-Loader.ipynb  01-PDF-Loader.ipynb  12-UpstageLayoutAnalysisLoader.ipynb  13-Llamaparser.ipynb
06-Modules/08-Embeddings/: 03-HuggingFaceEmbeddings.ipynb
06-Modules/09-VectorStore/: 01-Chroma.ipynb  03-Pinecone.ipynb
06-Modules/10-Retriever/: 02-ContextualCompressionRetriever.ipynb  04-LongContextReorder.ipynb  05-ParentDocumentRetriever.ipynb  (+4 more)
(+23 files in other folders)
