[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langchain-teddynote>=0.4.4",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
]
